--- a/shisha-web/pom.xml
+++ b/shisha-web/pom.xml
@@ -8,5 +8,45 @@
     <artifactId>shisha-web</artifactId>
     <version>1.0</version>
 
+    <properties>
+        <primefaces-version>5.2.RC1</primefaces-version>
+    </properties>
+
+    <dependencies>
+        <!--JSF (include "jsf-api" and "jsf-impl")-->
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.faces</artifactId>
+            <version>2.2.10</version>
+        </dependency>
+
+        <!--Primefaces library-->
+        <!--Primefaces библиотеки-->
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>${primefaces-version}</version>
+        </dependency>
+
+        <!--Primefaces themes-->
+        <!--Primefaces темы-->
+        <dependency>
+            <groupId>org.primefaces.themes</groupId>
+            <artifactId>all-themes</artifactId>
+            <version>1.0.10</version>
+        </dependency>
+
+    </dependencies>
+
+    <!--Primefaces repository. Need to download themes-->
+    <!--Репозиторий primefaces. Нужно указать, чтобы можно было скачивать различные темы оформления компонентов-->
+    <repositories>
+        <repository>
+            <id>prime-repo</id>
+            <name>PrimeFaces Maven Repository</name>
+            <url>http://repository.primefaces.org</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
 
 </project>
